slopchop-report.txt
$ cargo clippy --all-targets -- -D warnings -W clippy::pedantic -W clippy::unwrap_used -W clippy::expect_used -W clippy::indexing_slicing -A clippy::struct_excessive_bools -A clippy::module_name_repetitions -A clippy::missing_errors_doc -A clippy::must_use_candidate
    Checking mealgen v0.1.0 (/home/juno/mealgen)
error[E0596]: cannot borrow `locks` as mutable, as it is not declared as mutable
   --> src/components/pages/meal_generator.rs:340:37
    |
340 |                         let mut w = locks.write();
    |                                     ^^^^^ cannot borrow as mutable
    |
help: consider changing this to be mutable
    |
317 |     mut locks: Signal<LockState>,
    |     +++

For more information about this error, try `rustc --explain E0596`.
error: could not compile `mealgen` (bin "mealgen" test) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `mealgen` (bin "mealgen") due to 1 previous error
[exit code: 101]

$ cargo test
   Compiling mealgen v0.1.0 (/home/juno/mealgen)
error[E0596]: cannot borrow `locks` as mutable, as it is not declared as mutable
   --> src/components/pages/meal_generator.rs:340:37
    |
340 |                         let mut w = locks.write();
    |                                     ^^^^^ cannot borrow as mutable
    |
help: consider changing this to be mutable
    |
317 |     mut locks: Signal<LockState>,
    |     +++

For more information about this error, try `rustc --explain E0596`.
error: could not compile `mealgen` (bin "mealgen" test) due to 1 previous error
[exit code: 101]

